<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPink"
    tools:context=".parent.ParentRegister">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:text="@string/registration_parent"/>

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120sp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/full_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:textColorHint="@color/colorBlack"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/fullname"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/colorBlack"
        android:layout_below="@+id/email"/>

    <EditText
        android:id="@+id/childName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/student_name"
        android:layout_below="@+id/password"/>

    <EditText
        android:id="@+id/gradeChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/student_grade"
        android:layout_below="@+id/childName"/>

    <Button
        android:id="@+id/btnRegister"
        android:text="@string/registration"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/gradeChild" />

    <TextView
        android:id="@+id/linkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/btnRegister"
        android:textSize="20sp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/colorBlack"
        android:text="@string/already_login" />


</RelativeLayout>