<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPink"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:padding="30dp"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20sp"
        android:layout_marginTop="100sp">

    <Button
        android:id="@+id/btnStudent"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/student"
        android:textStyle="bold"/>

        <Button
            android:id="@+id/btnTeacher"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnParent"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/parent"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="30sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>