<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".teacher.TeacherHome">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacherHome"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:padding="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/techName"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/teacher_name"
            android:padding="10sp"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>