<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPink"
    tools:context=".Login">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:padding="30sp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:orientation="vertical"
        android:gravity="center">
        
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="30sp"/>
        
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="@color/colorBlack"
            android:text="@string/login"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/loginRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/create_register"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:gravity="center"/>
        
    </LinearLayout>

</LinearLayout>